fix(footer): spacing in class footer
se acomodo el espaciado y la distribucion de los items de la clase
"footer".

Se tuvo que adaptar los widges con margin y padig en cero para que sea
de facil acomodo para la clase footer

--- a/style.css
+++ b/style.css
@@ -280,20 +280,20 @@ form .form-control {
 
 /* ********** Seccion Footer ************* */
 .footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    padding: 2vh 5vw 2vh 5vw;
+
     background-color: #454955;
     color: #fff;   
-
-    display: flex;
-    flex-direction: row;
-    
-    width: 100%;
-
 }
 
 /* weather widget */
 .weather-widget {
-    margin: 1vw;
     padding: 0;
+    margin: 0;
 
     background-color: var(--color-with);
     color: var(--color-gray);
@@ -310,7 +310,6 @@ form .form-control {
 .weather-widget__text--header{
     font-size: 20px;
 }
-
 .weather-widget__header{
     margin: 5px;
     padding: 0;
@@ -333,9 +332,8 @@ form .form-control {
     height: 40px;
 
     padding: 0;
-    margin: 1vh;
+    margin: 0;
 }
-
 .whatsapp-widget__icon{
     height: 100%;
 
